--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="bg-white p-4 shadow-md text-center relative">
         <h1 class="text-2xl font-bold text-yellow-500">ROYAL AUTO HUB</h1>
         <p class="text-sm italic font-semibold">Quality you can trust</p>
-        <div onclick="makeCall('+918945063159')" class="absolute top-4 right-4 text-green-600 cursor-pointer">
+        <div onclick="makeCall('+917047174035')" class="absolute top-4 right-4 text-green-600 cursor-pointer">
             <i class="fas fa-phone-alt text-2xl"></i>
         </div>
     </header>
@@ -73,11 +73,11 @@
             <div class="space-y-3">
                 <div class="p-3 bg-white border-l-4 border-yellow-500 shadow-sm flex justify-between items-center">
                     <div><h3 class="font-bold text-sm">HDFC Bank Finance</h3><p class="text-xs">918945063159</p></div>
-                    <button onclick="makeCall('+918945063159')" class="bg-green-500 text-white px-3 py-1 rounded text-xs font-bold"><i class="fas fa-phone-alt mr-1"></i> Call</button>
+                    <button onclick="makeCall('+917047174035')" class="bg-green-500 text-white px-3 py-1 rounded text-xs font-bold"><i class="fas fa-phone-alt mr-1"></i> Call</button>
                 </div>
                 <div class="p-3 bg-white border-l-4 border-yellow-500 shadow-sm flex justify-between items-center">
                     <div><h3 class="font-bold text-sm">Mahindra Finance</h3><p class="text-xs">918945063159</p></div>
-                    <button onclick="makeCall('+918945063159')" class="bg-green-500 text-white px-3 py-1 rounded text-xs font-bold"><i class="fas fa-phone-alt mr-1"></i> Call</button>
+                    <button onclick="makeCall('+917047174035')" class="bg-green-500 text-white px-3 py-1 rounded text-xs font-bold"><i class="fas fa-phone-alt mr-1"></i> Call</button>
                 </div>
             </div>
         </section>
@@ -93,10 +93,10 @@
             <div class="bg-blue-50 p-4 rounded mb-6">
                 <h3 class="text-gray-500 font-bold text-xs mb-3 uppercase tracking-widest border-b pb-1">Help & Support</h3>
                 <div class="flex flex-col gap-3">
-                    <div onclick="makeCall('+918945063159')" class="flex justify-between items-center text-sm font-medium text-gray-800 cursor-pointer">
+                    <div onclick="makeCall('+917047174035')" class="flex justify-between items-center text-sm font-medium text-gray-800 cursor-pointer">
                         Contact Us (Call) <span class="text-green-600"><i class="fas fa-phone-alt"></i></span>
                     </div>
-                    <a href="https://wa.me/918945063159?text=Hello, I need assistance." target="_blank" class="flex justify-between items-center text-sm font-medium text-gray-800">
+                    <a href="https://wa.me/+917047174035?text=Hello, I need assistance." target="_blank" class="flex justify-between items-center text-sm font-medium text-gray-800">
                         Chat on WhatsApp <span class="text-green-500"><i class="fab fa-whatsapp text-lg"></i></span>
                     </a>
                 </div>
@@ -123,7 +123,7 @@
             <div class="p-6">
                 <h3 id="detName" class="text-xl font-bold border-b pb-2 mb-4 text-gray-800"></h3>
                 <div id="detList" class="space-y-2 text-sm text-gray-600"></div>
-                <button onclick="makeCall('+918945063159')" class="mt-6 w-full bg-green-600 text-white py-2 rounded font-bold uppercase">Call for Booking</button>
+                <button onclick="makeCall('+917047174035')" class="mt-6 w-full bg-green-600 text-white py-2 rounded font-bold uppercase">Call for Booking</button>
             </div>
         </div>
     </div>
