Implement news bar for latest updates
Add a news bar with scrolling text for latest updates.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
     <style>
         .hidden { display: none; }
         #carModal { background-color: rgba(0,0,0,0.7); }
+
+        /* --- NEW: Chalti hui news ka style --- */
+        .news-bar {
+            background-color: #ffd700;
+            color: #000;
+            padding: 8px 0;
+            font-weight: bold;
+            overflow: hidden;
+            white-space: nowrap;
+            border-bottom: 1px solid #e5e7eb;
+        }
+        .news-text {
+            display: inline-block;
+            padding-left: 100%;
+            animation: moveNews 20s linear infinite;
+        }
+        @keyframes moveNews {
+            0% { transform: translateX(0); }
+            100% { transform: translateX(-100%); }
+        }
     </style>
 </head>
 <body class="bg-gray-50 font-sans">
@@ -20,6 +40,14 @@
             <i class="fas fa-phone-alt text-2xl"></i>
         </div>
     </header>
+
+    <div class="news-bar">
+        <div class="news-text">
+            <a href="https://wa.me/+917047174035" style="text-decoration: none; color: black;">📢 Latest News: New Stock Arriving Soon! Click to Inquiry</a> &nbsp;&nbsp;&nbsp;&nbsp; | &nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="https://wa.me/+917047174035" style="text-decoration: none; color: black;">🔥 Coming Soon: Premium Ceramic Coating Services</a> &nbsp;&nbsp;&nbsp;&nbsp; | &nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="https://wa.me/+917047174035" style="text-decoration: none; color: black;">🚗 Get 20% Off on First Service - Book via WhatsApp</a>
+        </div>
+    </div>
 
     <nav class="flex justify-around bg-white p-4 mt-2 shadow-sm border-b">
         <div onclick="showSection('home')" class="cursor-pointer text-center">
@@ -34,8 +62,7 @@
             <img src="https://cdn-icons-png.flaticon.com/512/2845/2845811.png" class="w-10 mx-auto" alt="Loans">
             <p class="text-xs font-bold">Loans</p>
         </div>
-        <a href="https://webportal.fibe.in/check-credit-score-free?utm_source=Google_CIRWeb&campaignid=23271434871&adgroupid=194548371051&utm_term=how%20to%20check%20credit%20score%20online_p&device=m&gad_source=1&gad_campaignid=23271434871&gbraid=0AAAAADEHgCVdO_9ioSwhJz6ZHw9DqGbYn&gclid=Cj0KCQiA-YvMBhDtARIsAHZuUzKK-JCmsYhSUrRGAbRU0K54MQGICQVrT8TVf8YxfzDs9ChPZpqJvjAaAsDwEALw_wcB" 
-           target="_blank" class="text-center">
+        <a href="https://webportal.fibe.in/check-credit-score-free" target="_blank" class="text-center">
             <img src="https://cdn-icons-png.flaticon.com/512/3133/3133160.png" class="w-10 mx-auto" alt="Credit Score">
             <p class="text-xs font-bold text-black">Credit score</p>
         </a>
@@ -46,7 +73,7 @@
             <div class="bg-blue-100 p-6 rounded-lg text-center">
                 <h2 class="text-xl font-bold mb-2">Welcome to Royal Auto Hub</h2>
                 <p class="text-gray-700">Hamari behtareen cars dekhne ke liye 'Buy Car' par click karein.</p>
-                <img src="<a href="https://ibb.co/BV2tfZG7"><img src="https://i.ibb.co/jvkT8Mzx/1768181498879.png" alt="1768181498879" border="0"></a>
+                <img src="https://i.ibb.co/jvkT8Mzx/1768181498879.png" class="mx-auto mt-4 rounded shadow-lg" alt="Royal Auto Hub">
             </div>
         </section>
 
@@ -56,14 +83,14 @@
                 <div class="bg-white p-2 rounded shadow border relative">
                     <img src="https://stimg.cardekho.com/images/carexteriorimages/630x420/Maruti/Wagon-R/10365/1687580655486/front-left-side-47.jpg" class="rounded w-full" alt="Car">
                     <h3 class="font-bold text-sm mt-1">2019 Mahindra Bolero</h3>
-                    <p class="text-[10px] text-gray-500">Disel | 74,374 km</p>
-                    <button onclick="openCarModal('2019 Bolero', '74,374 km', 'Disel', '2nd Owner', 'HR-26', '₹ 5.10 Lakh')" class="mt-2 bg-yellow-500 text-white w-full py-1 text-xs rounded font-bold">View Details</button>
+                    <p class="text-[10px] text-gray-500">Diesel | 74,374 km</p>
+                    <button onclick="openCarModal('2019 Bolero', '74,374 km', 'Diesel', '2nd Owner', 'HR-26', '₹ 5.10 Lakh')" class="mt-2 bg-yellow-500 text-white w-full py-1 text-xs rounded font-bold">View Details</button>
                 </div>
                 <div class="bg-white p-2 rounded shadow border relative">
                     <img src="https://stimg.cardekho.com/images/carexteriorimages/630x420/Maruti/Swift/10406/1715243160273/front-left-side-47.jpg" class="rounded w-full" alt="Car">
                     <h3 class="font-bold text-sm mt-1">2021 CELERIO</h3>
                     <p class="text-[10px] text-gray-500">Petrol | 32,000 km</p>
-                    <button onclick="openCarModal('2016 CELERIO', '49,000 km', 'Petrol', '1st Owner', 'BS-IV', '₹ 3.00 Lakh')" class="mt-2 bg-yellow-500 text-white w-full py-1 text-xs rounded font-bold">View Details</button>
+                    <button onclick="openCarModal('2021 CELERIO', '32,000 km', 'Petrol', '1st Owner', 'BS-VI', '₹ 3.00 Lakh')" class="mt-2 bg-yellow-500 text-white w-full py-1 text-xs rounded font-bold">View Details</button>
                 </div>
             </div>
         </section>
@@ -72,76 +99,48 @@
             <h2 class="text-lg font-bold mb-4">Finance Partners</h2>
             <div class="space-y-3">
                 <div class="p-3 bg-white border-l-4 border-yellow-500 shadow-sm flex justify-between items-center">
-                    <div><h3 class="font-bold text-sm">HDFC Bank Finance</h3><p class="text-xs">918945063159</p></div>
-                    <button onclick="makeCall('+917047174035')" class="bg-green-500 text-white px-3 py-1 rounded text-xs font-bold"><i class="fas fa-phone-alt mr-1"></i> Call</button>
-                </div>
-                <div class="p-3 bg-white border-l-4 border-yellow-500 shadow-sm flex justify-between items-center">
-                    <div><h3 class="font-bold text-sm">Mahindra Finance</h3><p class="text-xs">918945063159</p></div>
-                    <button onclick="makeCall('+917047174035')" class="bg-green-500 text-white px-3 py-1 rounded text-xs font-bold"><i class="fas fa-phone-alt mr-1"></i> Call</button>
+                    <div><h3 class="font-bold text-sm">HDFC Bank Finance</h3><p class="text-xs">+917047174035</p></div>
+                    <button onclick="makeCall('+918945063159')" class="bg-green-500 text-white px-3 py-1 rounded text-xs font-bold"><i class="fas fa-phone-alt mr-1"></i> Call</button>
                 </div>
             </div>
         </section>
     </main>
 
     <footer class="mt-10 p-6 bg-white border-t">
-        <div class="max-w-md mx-auto">
-            <div class="text-center mb-6">
-                <h2 class="text-lg font-bold"><span class="text-cyan-400">ROYAL</span> <span class="text-yellow-400">AUTO HUB</span></h2>
-                <p class="text-xs font-semibold text-blue-900 mt-1">Nahar khal nearby kali Mata Mandir (Jhargram)</p>
-            </div>
-
-            <div class="bg-blue-50 p-4 rounded mb-6">
-                <h3 class="text-gray-500 font-bold text-xs mb-3 uppercase tracking-widest border-b pb-1">Help & Support</h3>
-                <div class="flex flex-col gap-3">
-                    <div onclick="makeCall('+917047174035')" class="flex justify-between items-center text-sm font-medium text-gray-800 cursor-pointer">
-                        Contact Us (Call) <span class="text-green-600"><i class="fas fa-phone-alt"></i></span>
-                    </div>
-                    <a href="https://wa.me/+917047174035?text=Hello, I need assistance." target="_blank" class="flex justify-between items-center text-sm font-medium text-gray-800">
-                        Chat on WhatsApp <span class="text-green-500"><i class="fab fa-whatsapp text-lg"></i></span>
-                    </a>
-                </div>
-            </div>
-
-            <div class="text-center">
-                <h3 class="text-gray-500 font-bold text-xs mb-4 uppercase tracking-widest">Social Links</h3>
-                <div class="flex justify-center space-x-5">
-                    <a href="https://www.facebook.com/YOUR_FB_PAGE" target="_blank" class="w-10 h-10 bg-black text-white rounded-full flex items-center justify-center"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="w-10 h-10 bg-black text-white rounded-full flex items-center justify-center"><i class="fa-brands fa-x-twitter"></i></a>
-                    <a href="#" class="w-10 h-10 bg-black text-white rounded-full flex items-center justify-center"><i class="fab fa-instagram"></i></a>
-                    <a href="#" class="w-10 h-10 bg-black text-white rounded-full flex items-center justify-center"><i class="fab fa-linkedin-in"></i></a>
-                </div>
+        <div class="max-w-md mx-auto text-center">
+            <h2 class="text-lg font-bold"><span class="text-cyan-400">ROYAL</span> <span class="text-yellow-400">AUTO HUB</span></h2>
+            <p class="text-xs font-semibold text-blue-900 mt-1">Nahar khal nearby kali Mata Mandir (Jhargram)</p>
+            <div class="mt-4 flex justify-center space-x-5">
+                <a href="https://wa.me/918945063159" class="text-green-500 text-2xl"><i class="fab fa-whatsapp"></i></a>
+                <a href="#" class="text-blue-600 text-2xl"><i class="fab fa-facebook"></i></a>
             </div>
         </div>
     </footer>
 
     <div id="carModal" class="hidden fixed inset-0 z-50 flex items-center justify-center p-4">
-        <div class="bg-white rounded-lg shadow-2xl w-full max-w-sm overflow-hidden animate-bounce-in">
+        <div class="bg-white rounded-lg shadow-2xl w-full max-w-sm overflow-hidden">
             <div class="bg-yellow-500 p-4 text-white flex justify-between">
                 <h2 class="font-bold">Vehicle Details</h2>
                 <button onclick="closeModal()" class="text-xl font-bold">&times;</button>
             </div>
-            <div class="p-6">
+            <div class="p-6 text-center">
                 <h3 id="detName" class="text-xl font-bold border-b pb-2 mb-4 text-gray-800"></h3>
-                <div id="detList" class="space-y-2 text-sm text-gray-600"></div>
-                <button onclick="makeCall('+917047174035')" class="mt-6 w-full bg-green-600 text-white py-2 rounded font-bold uppercase">Call for Booking</button>
+                <div id="detList" class="space-y-2 text-sm text-gray-600 text-left"></div>
+                <button onclick="makeCall('+918945063159')" class="mt-6 w-full bg-green-600 text-white py-2 rounded font-bold uppercase">Call for Booking</button>
             </div>
         </div>
     </div>
 
     <script>
-        // Section Switching
         function showSection(sectionId) {
             document.querySelectorAll('.content-section').forEach(s => s.classList.add('hidden'));
             document.getElementById(sectionId).classList.remove('hidden');
         }
 
-        // --- FIXED CALLING FUNCTION ---
         function makeCall(number) {
-            // JavaScript ke zariye link ko force-open karenge
             window.location.href = 'tel:' + number;
         }
 
-        // Modal Controls
         function openCarModal(name, km, fuel, owner, reg, price) {
             document.getElementById('detName').innerText = name;
             document.getElementById('detList').innerHTML = `
